# AcademicSearch-PaperKB-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/agents/: academic-search.md  paper-kb-agent.md
.claude/skills/lit-review/: SKILL.md
academic_search_paperkb_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: mcp_claude.json  mcp_cursor.json
docs/: academic_search_kb_mcp_design.md  progress.md
examples/: kb_demo.py  search_demo.py
scripts/: run_tests_all.sh  run_tests_v0.sh  run_tests_v1.sh  run_tests_v2.sh  run_tests_v3.sh  start_kb_server.sh  start_search_server.sh
src/api/: app.py
src/core/: kb_service.py  models.py
src/core/embedding/: __init__.py  base.py  fake_embedder.py  openai_embedder.py
src/core/kb_query/: __init__.py  factory.py  faiss_retriever.py  retriever.py
src/core/kb_store/: __init__.py  chunk_store.py  database.py  paper_store.py
src/core/paper_search/: __init__.py  aggregator.py  arxiv_client.py  base.py  semantic_scholar.py
src/core/pdf_ingest/: __init__.py  chunker.py  downloader.py  parser.py
src/servers/: academic_search_server.py  paper_kb_server.py
tests/: test_kb_store.py  test_paper_search.py  test_pdf_ingest.py  test_v0_search.py  test_v1_ingest.py  test_v2_faiss.py  test_v3_chunking.py  test_v3_mcp_server.py  test_v3_rest_api.py  test_v3_semantic_scholar.py
